# luvie

./: .gitignore  AI  AIRESUME  BUILD.md  CHORD_MAPPING.txt  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONVERSATION_LV2_TRANSPORTS.txt  DESIGN_DECISIONS.txt  GUI_RESEARCH.txt  INSTALL  MANUAL.txt  MIDI_EXTENSIONS.txt  Makefile  NOTES.txt  REQUIREMENTS.txt  RESUME  Session.vim  TODOS.txt  TRANSPORTS.txt  example.midnam  luvie.c  luvie.desktop  luvie.ttl  manifest.ttl  meson.build  meson.build.BAK  meson_options.txt  todos.txt
LICENCES/fltk/: LICENSE
LICENCES/rtmidi/: LICENCE
cmake/: GitVersion.cmake
dui/: .gitignore  Session.vim  dub.sdl  dub.selections.json
dui/source/: app.d  grid.d
flut/: pubspec.yaml
guiResearch/: 2Dvectors.txt  cpuUsage.txt  staticLinking.txt
junk/: carlaTest1.carxp
junk/programmingStuff/: instant.xml  programmingStuff.ardour  programmingStuff.ardour.bak  programmingStuff.history.bak  programmingStuff.pending
libs/: .gitignore  downloadAll.sh
libs/installScripts/: fltk.sh  lv2.wrap  serd.wrap
lv2/: CMakeLists.txt  Makefile  dsp_timeline.h  luvie_dsp.c  luvie_dsp.cpp  luvie_dsp.h  luvie_dsp.ttl  luvie_ui.cpp  luvie_ui.ttl  manifest.ttl  test_host.cpp
plugins/: meson.build
plugins/bens1.lv2/: bens1.c  bens1.ttl  manifest.ttl.in  (+1 more)
plugins/harmony.lv2/: harmony.c  harmony.h  harmony.ttl  manifest.ttl  meson.build
songEditor/: MakefileX  Session.vim  callLuvie.c  manifest.ttl  meson.build  pluginLoader.c  songEditor.c  songEditor.ttl
songEditor.lv2/: meson.build  pluginLoader.c  pluginLoader.h  songEditor.c  songEditor.h  songEditor.ttl
src/: CMakeLists.txt  Makefile  Session.vim  activePatternSet.cpp  activePatternSet.hpp  alsaPort.cpp  alsaPort.hpp  appWindow.cpp  basePatternEditor.cpp  basePatternEditor.hpp  cell.hpp  connectionsOverlay.cpp  connectionsOverlay.hpp  debugPort.hpp  drumGrid.cpp  drumGrid.hpp  drumPatternEditor.cpp  drumPatternEditor.hpp  editor.cpp  editor.hpp  grid.cpp  grid.hpp  gridPane.hpp  gridScrollPane.hpp  iActivePatternObserver.hpp  inlineEditDispatch.hpp  inlineInput.hpp  itimelineobserver.hpp  itransport.hpp  jackObserver.cpp  jackObserver.hpp  jackPort.cpp  jackPort.hpp  jackShim.cpp  jackTransport.cpp  jackTransport.hpp  loopContextPopup.cpp  loopContextPopup.hpp  loopEditor.cpp  loopEditor.hpp  (+89 more)
src/lv2/: CMakeLists.txt  luvie.version  luvie_dsp.cpp  luvie_dsp.h  luvie_dsp.ttl  luvie_ui.cpp  test_host.cpp
src/modern/: beatUnitChoice.hpp  contextMenuPopup.hpp  cursors.cpp  cursors.hpp  denomBeatChoice.hpp  inputEditorPopup.hpp  modernChoice.hpp  modernSlider.hpp  modernSpinner.hpp  modernTabs.cpp  modernTabs.hpp  modernValueInput.hpp  overlayWindow.cpp  overlayWindow.hpp  toggleButton.hpp
src/outputs/: debugPort.cpp  midiBackend.hpp  observableInstrument.hpp  outputsOverlay.cpp  outputsOverlay.hpp  portRegistry.cpp  rtMidiPort.cpp  rtMidiPort.hpp
src/patternEditors/: basePatternEditor.cpp  basePatternEditor.hpp  chords.hpp  drumGrid.cpp  drumGrid.hpp  drumPatternEditor.cpp  drumPatternEditor.hpp  noteAuditioner.cpp  noteAuditioner.hpp  noteContextPopup.cpp  noteContextPopup.hpp  noteLabels.cpp  noteLabels.hpp  noteLabelsContextPopup.hpp  patternData.hpp  patternEditor.cpp  patternEditor.hpp  patternGrid.cpp  patternGrid.hpp  patternPanel.cpp  patternPanel.hpp  patternParamGrid.cpp  patternParamGrid.hpp  pianorollEditor.cpp  pianorollEditor.hpp  pianorollGrid.cpp  pianorollGrid.hpp
src/session/: dirtyTracker.hpp  nsmSession.cpp  nsmSession.hpp  sessionManager.hpp  standaloneSession.cpp  standaloneSession.hpp
src/songEditor/: iLoopObserver.hpp  loopRuler.cpp  loopRuler.hpp  loopRulerContextPopup.cpp  loopRulerContextPopup.hpp  markerContextPopup.cpp  markerContextPopup.hpp  markerPopup.cpp  markerPopup.hpp  markerRuler.cpp  markerRuler.hpp  observablePattern.cpp  observablePattern.hpp  observableSong.cpp  observableSong.hpp  patternNames.cpp  patternNames.hpp  songEditor.cpp  songEditor.hpp  songGrid.cpp  songGrid.hpp  timeline.hpp  timelineIO.cpp  timelineIO.hpp  trackContextPopup.cpp  trackContextPopup.hpp  trackControls.cpp  trackControls.hpp  trackLabels.cpp  trackLabels.hpp
src/transports/: itransport.hpp  jackTransport.cpp  jackTransport.hpp  loopFiring.hpp  playhead.cpp  playhead.hpp  sequencer.cpp  sequencer.hpp  simpleTransport.cpp  transport.cpp  transport.hpp  transportRouter.hpp
subprojects/: fltk.wrap.BAK  glslang.wrap  glslang.wrap.BAK  pugl.wrap  sord.wrap
testFloem/: Cargo.toml  Session.vim
testFloem/src/: main.rs  slider2.rs
testFltk/: Cargo.toml  Session.vim
testFltk/src/: customBox.rs  grid.rs  gridArea.rs  main.rs
testFltk/src/gridArea/: contextMenuPopup.rs  grid.rs  gridOLD.rs
testFltk/src/gridArea/grid/: gridImpl.rs
testImgui/: .gitignore  Cargo.toml
testImgui/src/: main.rs  mainOLD.rs  mainOLD2.rs
testiced/: Cargo.toml  Session.vim
testiced/src/: Session.vim  cells.rs  contextMenuPopup.rs  contextMenuPopup.rs.NEW  grid.rs  gridArea.rs  main.OLD.rs  main.rs
testiced/src/gridArea/: grid.rs
testiced/src/gridArea/grid/: gridCalcs.rs  gridDraw.rs  gridUpdate.rs
testui/: CMakeLists.txt.OLD  Makefile  Session.vim  compile_commands.json  cursors.cpp  grid.cpp  grid.hpp  itransport.hpp  main.c  main.cpp  main2.cpp  meson.build  outerGrid.cpp  outerGrid.hpp  popup.OLD.cpp  popup.OLD.hpp  popup.cpp  popup.hpp  simpleTransport.cpp  simpleTransport.hpp  transport.cpp  transport.hpp
testui2/: main.c  meson.build
ui/: Makefile  appWindow.cpp  appWindow.hpp  basePopup.hpp  cell.hpp  chords.hpp  cursors.cpp  cursors.hpp  editor.cpp  editor.hpp  grid.cpp  grid.hpp  grid.mods.cpp  gridScrollPane.hpp  inlineEditDispatch.cpp  itransport.hpp  main.cpp  markerPopup.cpp  markerPopup.hpp  markerRuler.cpp  markerRuler.hpp  modernButton.hpp  modernChoice.hpp  modernTabs.cpp  modernTabs.hpp  noteLabels.cpp  noteLabels.hpp  observableTimeline.cpp  observableTimeline.hpp  outerGrid.cpp  outerGrid.hpp  outerPatternGrid.cpp  outerPatternGrid.hpp  outerSongGrid.cpp  outerSongGrid.hpp  patternEditor.cpp  patternEditor.hpp  patternGrid.cpp  patternGrid.hpp  patternPanel.cpp  (+21 more)
(+91 files in other folders)
