[package]
name = "floem_test"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
#peniko = { version = "0.5.0" }

[dependencies]
#floem = "0.2.0"
floem = { git="https://github.com/lapce/floem.git" }
peniko = { version = "0.5.0" }
#peniko.workspace = true
#peniko = { workspace = true }
#floem_reactive = { path = "reactive", version = "0.2.0" }

