[package]
name = "imgui_test"
version = "0.1.0"
edition = "2021"

[dependencies]
#glium = { version = "0.34", default-features = true }
#imgui = {version = "0.10", features = ["tables-api"]}
#imgui-glium-renderer = "0.10"
#imgui-winit-support = "0.10"
#winit = {version = "0.27", features=["x11"]}

# MOST RECENT
#glium = { version = "0.36.0", default-features = true }
#imgui = {version = "0.12.0", features = ["tables-api"]}
#imgui-glium-renderer = "0.13.0"
#imgui-winit-support = "0.13.0"


glium = { version = "0.36.0", default-features = true }
imgui = {version = "0.12.0", features = ["tables-api"]}
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
winit = {version = "0.30", features=["x11"]}

